UI fix - header spacing

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -81,7 +81,7 @@ h3 {
 }
 
 .logo {
-  margin-right: 20px; /* Adjust this value as needed */
+  margin-right: 5px; /* Adjust this value as needed */
 }
 
 .header ul {
